<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <EditText
        android:id="@+id/lblNombreCompleto"
        android:layout_width="230dp"
        android:layout_height="48dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="4dp"
        android:fontFamily="casual"
        android:inputType="textPersonName"
        android:textColor="#020202"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNombreCompleto"
        tools:text="@string/lblNombreCompleto" />

    <TextView
        android:id="@+id/txtRepetirPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="28dp"
        android:fontFamily="casual"
        android:text="@string/txtRepetirPassword"
        android:textColor="#020202"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblPassword" />

    <TextView
        android:id="@+id/txtCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="36dp"
        android:fontFamily="casual"
        android:text="@string/txtCorreo"
        android:textColor="#020202"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblNombreCompleto" />

    <EditText
        android:id="@+id/lblUsuario"
        android:layout_width="230dp"
        android:layout_height="48dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="8dp"
        android:fontFamily="casual"
        android:inputType="textPersonName"
        android:textColor="#020202"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUsuario"
        tools:text="@string/lblUsuario" />

    <EditText
        android:id="@+id/lblPassword"
        android:layout_width="230dp"
        android:layout_height="48dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="4dp"
        android:fontFamily="casual"
        android:inputType="textPassword"
        android:textColor="#020202"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPassword"
        tools:text="@string/lblPassword" />

    <TextView
        android:id="@+id/txtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="44dp"
        android:fontFamily="casual"
        android:text="@string/txtPasswordR"
        android:textColor="#020202"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblUsuario" />

    <EditText
        android:id="@+id/lblRepetirPassword"
        android:layout_width="230dp"
        android:layout_height="48dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="8dp"
        android:fontFamily="casual"
        android:inputType="textPassword"
        android:textColor="#020202"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRepetirPassword"
        tools:text="@string/lblRepetirPassword" />

    <EditText
        android:id="@+id/lblCorreo"
        android:layout_width="230dp"
        android:layout_height="48dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="4dp"
        android:fontFamily="casual"
        android:inputType="textEmailAddress"
        android:textColor="#020202"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCorreo"
        tools:text="@string/lblCorreo" />

    <TextView
        android:id="@+id/txtUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="36dp"
        android:fontFamily="casual"
        android:text="@string/txtUsuarioR"
        android:textColor="#020202"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblCorreo" />

    <TextView
        android:id="@+id/txtNombreCompleto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="12dp"
        android:fontFamily="casual"
        android:text="@string/txtNombreCompleto"
        android:textColor="#020202"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRegistro" />

    <Button
        android:id="@+id/btnRegistrarse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="casual"
        android:text="@string/btnRegister"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblRepetirPassword" />

    <TextView
        android:id="@+id/txtRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:fontFamily="casual"
        android:text="@string/txtRegistro"
        android:textColor="#000000"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="47dp"
        android:layout_height="49dp"
        app:layout_constraintBottom_toBottomOf="@+id/lblCorreo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lblCorreo"
        app:layout_constraintTop_toTopOf="@+id/lblCorreo"
        app:srcCompat="@drawable/correo" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="56dp"
        android:layout_height="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/lblNombreCompleto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lblNombreCompleto"
        app:layout_constraintTop_toTopOf="@+id/lblNombreCompleto"
        app:srcCompat="@drawable/nombrecompleto" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="50dp"
        android:layout_height="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/lblUsuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lblUsuario"
        app:layout_constraintTop_toTopOf="@+id/lblUsuario"
        app:srcCompat="@drawable/avatar" />

    <Button
        android:id="@+id/btnVer1"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="0dp"
        android:text="👁"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/lblRepetirPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toEndOf="@+id/lblPassword"
        app:layout_constraintTop_toTopOf="@+id/lblPassword" />

    <Button
        android:id="@+id/btbVolverR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:text="@string/btnVolver"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
